Updating Java, Gradle, and Dependencies